--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 
 .nav-bar {
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   text-decoration: none;
   display: flex;
   justify-content:space-around;
