--- a/src/Componets/Home.css
+++ b/src/Componets/Home.css
@@ -1,14 +1,7 @@
 .Welcome-container{
     font-family:'Times New Roman', Times, serif;
-    display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr;
+    display: flex;
+    justify-content: center;
 
-}
-.welcome-text{
-    color:aquamarine;
-    background-color: black;
-    grid-column: 1/span 3;
-    grid-row: 1/span 3;  
 
 }
