search artist card image centered

--- a/src/Componets/GetArtist.css
+++ b/src/Componets/GetArtist.css
@@ -27,6 +27,11 @@
     
     border: solid;
   }
+  .card-image {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
   .card-info {
     align-items: center;
     display: flex;
