--- a/src/Componets/Home.css
+++ b/src/Componets/Home.css
@@ -2,26 +2,26 @@
     font-family:'Times New Roman', Times, serif;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 50px 1fr;
     
     
 }
 .welcome-message{
     font-family:'Times New Roman', Times, serif;
-    grid-row: 2 ;
+    grid-row: 2;
     grid-column: 2 /span 3;
  
     
 }
 .info-message{
 font-family:'Times New Roman', Times, serif;
-color: #820182;
+color:black;
 grid-row:3;
 grid-column: 1 /span 3;
 
-
-
- 
-
+}
+.welcome-image{
+    grid-row: 1;
+    grid-column: 1 /span 3;
 
 }
