--- a/src/Componets/Home.css
+++ b/src/Componets/Home.css
@@ -2,7 +2,7 @@
     font-family:'Times New Roman', Times, serif;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 50px 1fr;
+    grid-template-rows: 1fr 80px 1fr;
     
     
 }
@@ -19,9 +19,23 @@ color:black;
 grid-row:3;
 grid-column: 1 /span 3;
 
+
 }
 .welcome-image{
     grid-row: 1;
     grid-column: 1 /span 3;
 
+}
+@media(min-width: 600px){
+   
+    body{
+        font-size: 2rem;
+    }
+
+}
+@media(min-width: 800px){
+    .Welcome-container{
+        font-size: 2rem;
+        line-height: 1.5;
+    }
 }
